--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@ if ($_POST) {
                 <p class="language">Japanese</p>
               </a>
               <a
-                href="https://www.youtube.com/watch?v=hBbrGFCszU4"
+                href="https://ddorammeon.github.io/vn-jp-test/"
                 class="dropdown--item"
               >
                 <img src="./assets/img/flag.png" alt="" class="language__img" />
