--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@ if ($_POST) {
               />
               <div class="list__content">
                 <p class="list__info">日本語基準</p>
-                <p class="list__more">JLPT N3 <span>(相当)</span></p>
+                <p class="list__more">JLPT N3 <span>(相当 N3)</span></p>
               </div>
             </li>
 
@@ -436,10 +436,10 @@ if ($_POST) {
           <img src="./assets/img/fill-checked.svg" alt="" class="popup__img" />
           <h2 class="popup__heading">相談登録が成功しました。</h2>
           <p class="popup__desc">
-            電話にご注意ください。 国際教育センターは、
-            提供された電話番号でより詳しくプログラムについて相談するためにすぐに連絡します。
-            何か質問があれば、以下にご連絡ください：
-            <br />:メール <span>cie@ptit.edu.vn</span> <br />:ホットライン
+            入試に関する相談申込を完了しました。
+            国際教育センターは、お客様が提供された電話番号でより連絡いたします。
+            また、何かご不明な点や質問がありましたら、遠慮なくご連絡ください。
+            <br />Eメール: <span>cie@ptit.edu.vn</span> <br />Hotline:
             <span>088 616 0606</span>
           </p>
           <button class="popup__btn close-btn">了解しました。</button>
