--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ if ($_POST) {
           </div>
           <div class="dropdown">
             <div class="language--block">
-              <img src="./assets/img/flag.png" alt="" class="selectedImg" />
+              <img src="./assets/img/jp-flag.svg" alt="" class="selectedImg" />
               <p class="select">Japanese</p>
               <svg
                 width="16"
@@ -206,7 +206,11 @@ if ($_POST) {
 
             <div class="dropdown--list">
               <a href="" class="dropdown--item dropdown--item__active">
-                <img src="./assets/img/flag.png" alt="" class="language__img" />
+                <img
+                  src="./assets/img/jp-flag.svg"
+                  alt=""
+                  class="language__img"
+                />
                 <p class="language">Japanese</p>
               </a>
               <a
