--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@ if ($_POST) {
           <div class="dropdown">
             <div class="language--block">
               <img src="./assets/img/jp-flag.svg" alt="" class="selectedImg" />
-              <p class="select">Japanese</p>
+              <p class="select">Tiếng Nhật</p>
               <svg
                 width="16"
                 height="16"
@@ -211,7 +211,7 @@ if ($_POST) {
                   alt=""
                   class="language__img"
                 />
-                <p class="language">Japanese</p>
+                <p class="language">Tiếng Nhật</p>
               </a>
               <a
                 href="https://ddorammeon.github.io/vn-test/"
@@ -298,7 +298,7 @@ if ($_POST) {
               </p>
 
               <a
-                href="https://ddorammeon.github.io/faq-vn/"
+                href="https://ddorammeon.github.io/faq-jp/"
                 target="_blank"
                 class="question-faqs__more"
               >
@@ -773,7 +773,7 @@ if ($_POST) {
             </div>
 
             <a
-              href="https://ddorammeon.github.io/faq-vn/"
+              href="https://ddorammeon.github.io/faq-jp/"
               target="_blank"
               class="ques__submit--link"
             >
