--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ if ($_POST) {
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Kỹ sư Công nghệ thông tin Việt Nhật</title>
+    <title>越日情報技術</title>
 
     <!-- Favicon -->
     <link
@@ -172,7 +172,7 @@ if ($_POST) {
       <div class="main-content">
         <div class="header--top">
           <div class="logo--block">
-            <a href="#!">
+            <a href="https://ddorammeon.github.io/jp-test/">
               <img src="./assets/img/logo.png" alt="" class="logo" />
             </a>
             <div class="logo--content">
@@ -187,7 +187,7 @@ if ($_POST) {
           <div class="dropdown">
             <div class="language--block">
               <img src="./assets/img/jp-flag.svg" alt="" class="selectedImg" />
-              <p class="select">Tiếng Nhật</p>
+              <p class="select">日本語</p>
               <svg
                 width="16"
                 height="16"
@@ -211,7 +211,7 @@ if ($_POST) {
                   alt=""
                   class="language__img"
                 />
-                <p class="language">Tiếng Nhật</p>
+                <p class="language">日本語</p>
               </a>
               <a
                 href="https://ddorammeon.github.io/vn-test/"
@@ -727,6 +727,18 @@ if ($_POST) {
         <div class="main-content">
           <div class="ques--media">
             <img src="./assets/img/ques-img.png" alt="" class="ques__img" />
+            <div class="ques__img--content1 ques__img--content">
+              応募条件は？
+            </div>
+            <div class="ques__img--content2 ques__img--content">
+              トレーニングの時間 ？
+            </div>
+            <div class="ques__img--content3 ques__img--content">
+              卒業後の給料は？
+            </div>
+            <div class="ques__img--content4 ques__img--content">
+              語学証明書 ？
+            </div>
           </div>
           <div class="ques--content">
             <h2 class="ques--content__heading">よくある質問</h2>
@@ -952,11 +964,11 @@ if ($_POST) {
                 ５階、A1ビル<br />96A Tran Phu, Ha Dong, Ha Noi
               </p>
               <p class="address">
-                <img src="./assets/img/call.png" alt="địa chỉ" /> 直接連絡
+                <img src="./assets/img/call.svg" alt="địa chỉ" /> 直接連絡
               </p>
               <p class="address1">088.616.0606</p>
               <p class="address">
-                <img src="./assets/img/sms.png" alt="địa chỉ" /> Eメール対応
+                <img src="./assets/img/sms.svg" alt="địa chỉ" /> Eメール対応
               </p>
               <!-- <p class="address1">cie@ptit.edu.vn</p> -->
               <p
@@ -964,7 +976,7 @@ if ($_POST) {
                 onclick="copyToClipboard(this, 'cie@ptit.edu.vn')"
               >
                 cie@ptit.edu.vn<span class="copy-notification"
-                  >Copy thành công!</span
+                  >コピー成功!</span
                 >
               </p>
             </div>
